завершает позиционирование header и hero

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,58 @@ body {
   color: var(--primary-text-color);
 }
 
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
+
 /*====Header====*/
+
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header-conteiner {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-mail {
+  margin-left: auto;
+  margin-right: 50px;
+}
 
 .logo {
   font-family: Raleway;
@@ -32,6 +83,7 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+  margin-right: 93px;
 }
 
 .header-logo {
@@ -39,6 +91,9 @@ body {
 }
 
 .nav-list-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -72,24 +127,29 @@ body {
 
 .hero {
   background-color: var(--secondary-background-color);
+  text-align: center;
+  padding: 200px 0;
 }
 
 .hero-title {
+  width: 696px;
+  margin: 0 auto 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-background-color);
 }
 
 .hero-btn {
+  min-width: 200px;
+  padding: 10px 16px;
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
+  justify-content: center;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
@@ -103,6 +163,12 @@ body {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--secondary-accent-color);
+}
+
+.features {
+  display: flex;
+  align-items: center;
+  padding: 94px 0;
 }
 
 .features-title {
